Fix weird page overflow issue with extremely long drawer contents and `sr-only`

--- a/resources/css/tollerus.css
+++ b/resources/css/tollerus.css
@@ -31,6 +31,10 @@
         max-height: 0in;
         transition: margin-top 0.5s ease-out 0s, opacity 0.5s ease-out 0s, max-height 0s linear 0.5s;
     }
+    #tollerus_root[data-layout="admin"] .sr-only {
+        display: block;
+        position: static !important;
+    }
 
     /* Default values for CSS variables on public pages, customizable by host app */
     :root {
